@@ -105,6 +105,7 @@
 * Stripe: Add shipping address [jcreiff] #4539
 * PayuLatam: Add extra1, extra2, extra3 fields [jcreiff] #4550
 * Paysafe: Add fundingTransaction object [jcreiff] #4552
+* Shift4: Addition of required fields(recurring_pmt_num, recurring_pmt_count) to GSFs on MerchantE - Active Merchant [ali-hassan] #4553
 
 == Version 1.126.0 (April 15th, 2022)
 * Moneris: Add 3DS MPI field support [esmitperez] #4373
